# pasha_db_server

./: CMakeLists.txt  Database.cpp  Database.h  Query.cpp  Query.h  README.md  Record.cpp  Record.h  client  client.cpp  db  db.txt  fam  filetypes.xml  gen.cpp  gen.h  github.xml  http.cpp  input.txt  main.cpp  otch.txt  project.default.xml  server  server.cpp  test.txt  th_serv.cpp  updates.xml  vcs.xml
